--- a/cartoon/1559.html
+++ b/cartoon/1559.html
@@ -68,35 +68,41 @@
         <div class="theater-content m-Btm12">
             <div class="theater-page_header m-Head_img m-Btm4"></div>
             <div class="theater-title_area">
-                <a href='1528.html' class="theater-next jsOnDesignBtn"></a>
-                <div class="theater-story_num">第1552話</div>
-                <div class="theater-update_date">21/10/26更新</div>
-                <div class="theater-latest_title">えっ×4</div>
+                <a href='1552.html' class="theater-next jsOnDesignBtn"></a>
+                <div class="theater-story_num">第1559話</div>
+                <div class="theater-update_date">21/11/28更新</div>
+                <div class="theater-latest_title">ナベ、しましょう♪</div>
                 <a class="theater-btn_like jsOnDesignBtn " data-cartoon-id="111"></a>
-                <a href='1559.html' class="theater-previous jsOnDesignBtn"></a>
+                <a href='1563.html' class="theater-previous jsOnDesignBtn"></a>
             </div>
             <div class="theater-cartoon_area m-Top8 m-Btm8">
-                <img src="../image_sp/cartoon/1552/comic.jpg" width="292"><br>
+                <img src="../image_sp/cartoon/1559/comic.jpg" width="292"><br>
             </div>
             <div class="theater-title_area">
-                <a href='1528.html' class="theater-next jsOnDesignBtn"></a>
-                <div class="theater-story_num">第1552話</div>
-                <div class="theater-update_date">21/10/26更新</div>
-                <div class="theater-latest_title">えっ×4</div>
+                <a href='1552.html' class="theater-next jsOnDesignBtn"></a>
+                <div class="theater-story_num">第1559話</div>
+                <div class="theater-update_date">21/11/28更新</div>
+                <div class="theater-latest_title">ナベ、しましょう♪</div>
                 <a class="theater-btn_like jsOnDesignBtn " data-cartoon-id="111"></a>
-                <a href='1559.html' class="theater-previous jsOnDesignBtn"></a>
+                <a href='1563.html' class="theater-previous jsOnDesignBtn"></a>
             </div>
             <div class="theater-common_area m-Top12 m-Btm8">
                 <div class="theater-common_area_title theater-text_appearance_idol"></div>
                 <div class="theater-appearance_idol_list m-Top8 m-Cnt t-Lft">
-                    <div class="theater-appearance_idol" data-name="櫻井桃華" data-attribute-name="cute" data-rarity="1" data-image="../image_sp/card/cm/momoka_31.png">
-                        <img src="../image_sp/card/xs/momoka_31.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-name="佐々木千枝" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/quest/chie_34.png">
-                        <img src="../image_sp/card/xs/chie_34.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-name="橘ありす" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/cm/arisu_38.png">
-                        <img src="../image_sp/card/xs/arisu_38.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-name="前川みく" data-attribute-name="cute" data-rarity="3" data-image="../image_sp/card/quest/miku_01.png">
+                        <img src="../image_sp/card/xs/miku_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-name="新田美波" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/cm/minami_38.png">
+                        <img src="../image_sp/card/xs/minami_38.jpg" class="theater-appearance_idol_img"></div>
                     <div class="theater-appearance_idol" data-name="鷺沢文香" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/quest/fumika_01.png">
-                        <img src="../image_sp/card/xs/fumika_13.jpg" class="theater-appearance_idol_img"></div>
+                        <img src="../image_sp/card/xs/fumika_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-name="高峯のあ" data-attribute-name="cool" data-rarity="3" data-image="../image_sp/card/quest/noa_01.png">
+                        <img src="../image_sp/card/xs/noa_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-name="高垣楓" data-attribute-name="cool" data-rarity="3" data-image="../image_sp/card/quest/kaede_01.png">
+                        <img src="../image_sp/card/xs/kaede_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-name="神崎蘭子" data-attribute-name="cool" data-rarity="3" data-image="../image_sp/card/quest/ranko_01.png">
+                        <img src="../image_sp/card/xs/ranko_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-name="ｱﾅｽﾀｼｱ" data-attribute-name="cool" data-rarity="3" data-image="../image_sp/card/cm/anastasia_37.png">
+                        <img src="../image_sp/card/xs/anastasia_37.jpg" class="theater-appearance_idol_img"></div>
                     <div class="theater-idol_bg m-Top8 m-Btm4">
                         <div class="theater-idol_wrapper">
                             <div class="theater-idol_image">
