--- a/cartoon/index_j.html
+++ b/cartoon/index_j.html
@@ -62,26 +62,22 @@
         <link rel="stylesheet" type="text/css" href='../css/rich/theater.css' media="all">
         <div class="theater-content m-Btm12">
             <div class="theater-page_header_new m-Head_img m-Btm4">
-                <div class="theater-latest_story_num">第1552話</div>
-                <div class="theater-latest_update_date">21/10/26</div>
+                <div class="theater-latest_story_num">第1606話</div>
+                <div class="theater-latest_update_date">22/6/15</div>
                 <div class="theater-latest_thumbnail">
                     <a href='scene/1.html' class="jsOnDesignBtn">
-                    <img src="../image_sp/cartoon/1552/cover.jpg" width="137"></a>
+                    <img src="../image_sp/cartoon/1606/cover.jpg" width="137"></a>
                 </div>
                 <div class="theater-latest_title">
-                    <div class="theater-latest_title_text">えっ×4</div>
+                    <div class="theater-latest_title_text">絵本の中に住みたい</div>
                 </div>
                 <a href='scene/1.html' class="theater-btn_watch theater-btn_new_theater jsOnDesignBtn"></a>
-                <div class="theater-history_story_num">第1552話</div>
-                <div class="theater-history_update_date">21/10/26</div>
+                <div class="theater-history_story_num">第1606話</div>
+                <div class="theater-history_update_date">22/6/15</div>
                 <div class="theater-history_title">
-                    <div class="theater-latest_title_text">えっ×4</div>
+                    <div class="theater-latest_title_text">絵本の中に住みたい</div>
                 </div>
                 <a href='scene/111.html' class="theater-btn_watch theater-btn_recent jsOnDesignBtn"></a>
-                <form action="index.html" method="post">
-                    <input type="number" value="" pattern="\d*" min="1" max="1" name="scene" class="theater-textbox_story_number">
-                    <label class="theater-btn_watch theater-btn_search_story label_reset_style jsOnDesignBtn" style="cursor:pointer;"><input type="submit" value="" style="display:none;"></label>
-                </form>
             </div>
             <script>
                 Commonjs.setSearchMore({
@@ -286,6 +282,18 @@
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">第1552話</div></div>
                         <img src="../image_sp/cartoon/1552/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">21/10/26</div></div>
+                    </a><a href='1559.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">第1559話</div></div>
+                        <img src="../image_sp/cartoon/1559/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">21/11/28</div></div>
+                    </a><a href='1563.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">第1563話</div></div>
+                        <img src="../image_sp/cartoon/1563/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">21/12/7</div></div>
+                    </a><a href='1606.html' class="theater-thumbnail jsOnDesignBtn">
+                        <div class="theater-thumbnail_top"><div class="theater-story_num ">第1606話</div></div>
+                        <img src="../image_sp/cartoon/1606/small_cover.jpg" width="88">
+                        <div class="theater-thumbnail_bottom"><div class="theater-update_date">22/6/15</div></div>
                     </a>
                 </div>
             </div>
