--- a/item/show_premium_card_cjs/90/fumi_main.html
+++ b/item/show_premium_card_cjs/90/fumi_main.html
@@ -464,6 +464,46 @@
                                     </a>
                                 </li>
                             </ul>
+                            <ul class="displayBox t-Cnt">
+                                <li style="width:50%;">
+                                    <form method="get" action="fumika_39.html" style="height:90px;">
+                                        <input type="image" src="../../../image_sp/card/xs/fumika_39.jpg" height="75" class="jsOnDesignBtn"><br>
+                                        <br>
+                                        <input type="hidden" name="voice" value="0">
+                                    </form>
+                                    <a href="" class="jsOnDesignBtn">
+                                    </a>
+                                </li>
+                                <li style="width:50%;">
+                                    <form method="get" action="fumika_40.html" style="height:90px;">
+                                        <input type="image" src="../../../image_sp/card/xs/fumika_40.jpg" height="75" class="jsOnDesignBtn"><br>
+                                        <br>
+                                        <input type="hidden" name="voice" value="0">
+                                    </form>
+                                    <a href="" class="jsOnDesignBtn">
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul class="displayBox t-Cnt">
+                                <li style="width:50%;">
+                                    <form method="get" action="fumika_41.html" style="height:90px;">
+                                        <input type="image" src="../../../image_sp/card/xs/fumika_41.jpg" height="75" class="jsOnDesignBtn"><br>
+                                        <br>
+                                        <input type="hidden" name="voice" value="0">
+                                    </form>
+                                    <a href="" class="jsOnDesignBtn">
+                                    </a>
+                                </li>
+                                <li style="width:50%;">
+                                    <form method="get" action="fumika_42.html" style="height:90px;">
+                                        <input type="image" src="../../../image_sp/card/xs/fumika_42.jpg" height="75" class="jsOnDesignBtn"><br>
+                                        <br>
+                                        <input type="hidden" name="voice" value="0">
+                                    </form>
+                                    <a href="" class="jsOnDesignBtn">
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                         <div class="area-frame_bg_image"></div>
                     </div>
