--- a/memory/unit_collection_detail/840/102/4_k.html
+++ b/memory/unit_collection_detail/840/102/4_k.html
@@ -107,20 +107,23 @@
         <link rel="stylesheet" type="text/css" href="../../../../css/rich/event_assault.css" media="all">
         <h1 style="margin:0 0 10px;"><img src="../../../../image_sp/event/840/top_event.jpg" width="100%"></h1>
         <img src="../../../../image_sp/ui/line_hoshi.png" width="100%">
-        <section class="t-Cnt" id="mapIdolArea">
+        <section class="t-Cnt m-Btm5" id="mapIdolArea">
             <div class="raid-boss-area">
+                <div class="battle-result-area">
+                    <img src="../../../../image_sp/event/common/live_draw.png" width="80" alt="DRAW">
+                </div>
                 <div class="fukidashiWrap is-top">
                     <div class="fukiTop fukidashi att_2 unit3 position1">
                         <div class="comments">
-                            聞かせて、ください…♪
+                            봄이 오면, 자연스럽게 웃는 얼굴이 됩니다. 아냐도, 웃는 계절입니다…♪
                         </div>
                     </div>
                 </div>
                 <img src="../../../../image_sp/event_flash/840/unit/840102.png" width="320px">
                 <div class="fukidashiWrap is-bottom">
-                    <div class="fukiBtm fukidashi att_2 unit3 position2">
+                    <div class="fukiBtm fukidashi att_2 unit3 position3">
                         <div class="comments">
-                            どうか、そっと。囁くように
+                            …그럼, 상냥한 소리를 들으면서, 모두 함께 기뻐하죠. 봄이 온 것을.
                         </div>
                     </div>
                 </div>
@@ -130,21 +133,21 @@
             </div>
         </section>
         <div class="area-btn-common _base-width m-Btm12 story_btn_area">
-            <a class="btn_normal_line_5" href='1.html'>登場</a>
-            <div class="btn_normal_line_5 _hover">LIVE</div>
-            <a class="btn_normal_line_5" href='3.html'>LOSE</a>
-            <a class="btn_normal_line_5" href='4.html'>DRAW</a>
-            <a class="btn_normal_line_5" href='5.html'>WIN</a>
+            <a class="btn_normal_line_5" href='1_k.html'>등장</a>
+            <a class="btn_normal_line_5" href='2_k.html'>LIVE</a>
+            <a class="btn_normal_line_5" href='3_k.html'>LOSE</a>
+            <div class="btn_normal_line_5 _hover">DRAW</div>
+            <a class="btn_normal_line_5" href='5_k.html'>WIN</a>
         </div>
         <div class="t-Cnt">
         <img src="../../../../image_sp/event/840/banner_event_01.png" width="100%">
         2020/3/9 ~ 2020/3/17<br>
-        第40回 アイドルLIVEロワイヤル<br>
-        2ラウンドライバルユニットです。<br>
+        제 40회 아이돌 라이브 로얄<br>
+        2라운드 라이벌 유닛입니다.<br>
         </div>
         <img src="../../../../image_sp/ui/line_hoshi.png" width="100%">
-        <a href='../../unit_j.html'>
-            <div class="backLink">イベントメモリー</div>
+        <a href='../../unit.html'>
+            <div class="backLink">이벤트 메모리 상세</div>
         </a>
         <footer>
             <div class="line_idolmaster"></div><a href="#top" id="toPageTop" class="mypage_under">
