--- a/memory/unit_collection_detail/840/102/5.html
+++ b/memory/unit_collection_detail/840/102/5.html
@@ -133,22 +133,21 @@
             </div>
         </section>
         <div class="area-btn-common _base-width m-Btm12 story_btn_area">
-            <a class="btn_normal_line_5" href='1'>登場</a>
-            <a class="btn_normal_line_5" href='2'>LIVE</a>
-            <a class="btn_normal_line_5" href='3'>LOSE</a>
-            <a class="btn_normal_line_5" href='4'>DRAW</a>
+            <a class="btn_normal_line_5" href='1.html'>登場</a>
+            <a class="btn_normal_line_5" href='2.html'>LIVE</a>
+            <a class="btn_normal_line_5" href='3.html'>LOSE</a>
+            <a class="btn_normal_line_5" href='4.html'>DRAW</a>
             <div class="btn_normal_line_5 _hover">WIN</div>
         </div>
         <div class="t-Cnt">
         <img src="../../../../image_sp/event/840/banner_event_01.png" width="100%">
         2020/3/9 ~ 2020/3/17<br>
-        제 40회 아이돌 라이브 로얄<br>
         第40回 アイドルLIVEロワイヤル<br>
-        2라운드 라이벌 유닛입니다.<br>
+        2ラウンドライバルユニットです。<br>
         </div>
         <img src="../../../../image_sp/ui/line_hoshi.png" width="100%">
-        <a href='../../unit.html'>
-            <div class="backLink">이벤트 메모리 상세</div>
+        <a href='../../unit_j.html'>
+            <div class="backLink">イベントメモリー</div>
         </a>
         <footer>
             <div class="line_idolmaster"></div><a href="#top" id="toPageTop" class="mypage_under">
