--- a/memory/unit_collection_detail/unit_j.html
+++ b/memory/unit_collection_detail/unit_j.html
@@ -244,9 +244,9 @@
             <form action="#" name="area_select_form" method="post">
                 <div class="area-btn-common _base-width">
                     <select name="js_area_switch" id="js_area_switch" class="search_pulldown_1_5" style="font-size:12px;">
-                        <option value="1">로얄</option>
-                        <option value="2">도리페스</option>
-                        <option value="3">투어</option>
+                        <option value="1">ロワイヤル</option>
+                        <option value="2">ドリーム</option>
+                        <option value="3">ツアー</option>
                         <option value="4">ミュージックJAM</option>
                     </select>
                     <a id="jsAreaSwitchBtn" class="btn_decision_sub_line_3">
@@ -256,13 +256,13 @@
             </form>
         </div>
         <h2 id="area_title_1" class="title_img_blue" style="margin:0;">
-            <div>로얄</div>
+            <div>アイドルLIVEロワイヤル</div>
         </h2>
         <h2 id="area_title_2" class="title_img_blue" style="margin:0;display:none">
-            <div>도리페스</div>
+            <div>ドリームLIVEフェスティバル</div>
         </h2>
         <h2 id="area_title_3" class="title_img_blue" style="margin:0;display:none">
-            <div>투어</div>
+            <div>アイドルLIVEツアー</div>
         </h2>
         <h2 id="area_title_4" class="title_img_blue" style="margin:0;display:none">
             <div>ミュージックJAM</div>
@@ -430,10 +430,10 @@
     </script>
     <img src="../../image_sp/ui/line_hoshi.jpg" width="100%" class="m-Btm8"><br>
     <a href="unit.html">
-        <div class="backLink">한국어 버전</div>
+        <div class="backLink">韓國語版</div>
     </a>
     <a href='../../mypage.html'>
-        <div class="backLink">마이스튜디오</div>
+        <div class="backLink">マイスタジオ</div>
     </a>
     <script type="text/javascript">
         $(function() {
