--- a/cartoon/111_k.html
+++ b/cartoon/111_k.html
@@ -68,35 +68,39 @@
         <div class="theater-content m-Btm12">
             <div class="theater-page_header m-Head_img m-Btm4"></div>
             <div class="theater-title_area">
-                <a href='1528.html' class="theater-next jsOnDesignBtn"></a>
-                <div class="theater-story_num">第1552話</div>
-                <div class="theater-update_date">21/10/26更新</div>
-                <div class="theater-latest_title">えっ×4</div>
+                <div class="theater-story_num">제111화</div>
+                <div class="theater-update_date">13/5/21갱신</div>
+                <div class="theater-latest_title">에히메에 왔다입니다~!</div>
                 <a class="theater-btn_like jsOnDesignBtn " data-cartoon-id="111"></a>
-                <a href='1559.html' class="theater-previous jsOnDesignBtn"></a>
+                <a href='133.html' class="theater-previous jsOnDesignBtn"></a>
             </div>
             <div class="theater-cartoon_area m-Top8 m-Btm8">
-                <img src="../image_sp/cartoon/1552/comic.jpg" width="292"><br>
+                <img src="../image_sp/cartoon/111/comic_k.png" width="292"><br>
             </div>
             <div class="theater-title_area">
-                <a href='1528.html' class="theater-next jsOnDesignBtn"></a>
-                <div class="theater-story_num">第1552話</div>
-                <div class="theater-update_date">21/10/26更新</div>
-                <div class="theater-latest_title">えっ×4</div>
+                <div class="theater-story_num">제111화</div>
+                <div class="theater-update_date">13/5/21갱신</div>
+                <div class="theater-latest_title">에히메에 왔다입니다~!</div>
                 <a class="theater-btn_like jsOnDesignBtn " data-cartoon-id="111"></a>
-                <a href='1559.html' class="theater-previous jsOnDesignBtn"></a>
+                <a href='133.html' class="theater-previous jsOnDesignBtn"></a>
             </div>
             <div class="theater-common_area m-Top12 m-Btm8">
                 <div class="theater-common_area_title theater-text_appearance_idol"></div>
                 <div class="theater-appearance_idol_list m-Top8 m-Cnt t-Lft">
-                    <div class="theater-appearance_idol" data-name="櫻井桃華" data-attribute-name="cute" data-rarity="1" data-image="../image_sp/card/cm/momoka_31.png">
-                        <img src="../image_sp/card/xs/momoka_31.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-name="佐々木千枝" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/quest/chie_34.png">
-                        <img src="../image_sp/card/xs/chie_34.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-name="橘ありす" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/cm/arisu_38.png">
-                        <img src="../image_sp/card/xs/arisu_38.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-name="鷺沢文香" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/quest/fumika_01.png">
-                        <img src="../image_sp/card/xs/fumika_13.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-name="시마무라우즈키" data-attribute-name="cute" data-rarity="1" data-image="../image_sp/card/quest/uzuki_01.png">
+                    <img src="../image_sp/card/xs/uzuki_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-name="오오하라미치루" data-attribute-name="cute" data-rarity="1" data-image="../image_sp/card/quest/michiru_01.png">
+                    <img src="../image_sp/card/xs/michiru_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-name="시부야린" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/quest/rin_01.png">
+                    <img src="../image_sp/card/xs/rin_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-name="사기사와후미카" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/quest/fumika_01.png">
+                    <img src="../image_sp/card/xs/fumika_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-name="유우키하루" data-attribute-name="cool" data-rarity="3" data-image="../image_sp/card/quest/haru_01.png">
+                    <img src="../image_sp/card/xs/haru_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-name="혼다미오" data-attribute-name="passion" data-rarity="1" data-image="../image_sp/card/quest/honda_01.png">
+                    <img src="../image_sp/card/xs/honda_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-name="캐시･그레이엄" data-attribute-name="passion" data-rarity="3" data-image="../image_sp/card/quest/cathy_01.png">
+                    <img src="../image_sp/card/xs/cathy_01.jpg" class="theater-appearance_idol_img"></div>
                     <div class="theater-idol_bg m-Top8 m-Btm4">
                         <div class="theater-idol_wrapper">
                             <div class="theater-idol_image">
@@ -109,8 +113,8 @@
             </div>
             <div class="theater-page_footer"></div>
         </div>
-        <a href='index_j.html'>
-            <div class="backLink">劇場TOP</div>
+        <a href='index_k.html'>
+            <div class="backLink">극장TOP</div>
         </a>
         <script>
             $(function() {
@@ -146,7 +150,7 @@
             })
         </script>
         <a href='../../mypage.html'>
-            <div class="backLink">マイスタジオ</div>
+            <div class="backLink">마이스튜디오</div>
         </a>
         <footer>
             <div class="line_idolmaster"></div><a href="#top" id="toPageTop" class="mypage_under">
