--- a/memory/unit_collection_detail/unit.html
+++ b/memory/unit_collection_detail/unit.html
@@ -285,7 +285,7 @@
             }
         </style>
         <div id="area_tab_1" class="t-Cnt">
-            <a href='840/102/1.html' class="unit_collection jsOnDesignBtn" style="">
+            <a href='840/102/1_k.html' class="unit_collection jsOnDesignBtn" style="">
                 <div class="event_story_title">
                     <p>트랭퀼・위스퍼</p>
                 </div>
