--- a/cinderella_history/play_episode/44/3000110/1/0.html
+++ b/cinderella_history/play_episode/44/3000110/1/0.html
@@ -2684,7 +2684,7 @@
             "10131": {
                 "id": 1,
                 "hash_id": "",
-                "name": "프레데리카",
+                "name": "フレデリカ",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -2693,7 +2693,7 @@
             "10296": {
                 "id": 2,
                 "hash_id": "",
-                "name": "키요미",
+                "name": "清美",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -2736,7 +2736,7 @@
                 "face": ["1", "7", "1", "5", "3", "8", "4", "3", "6", "5", "2"]
             }
         };
-        window.im_cjs.title_name = '사무소' || 'no_title';
+        window.im_cjs.title_name = '事務所' || 'no_title';
         window.im_cjs.event_type = '2' || 0;
         window.im_cjs.jump_url = 'http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/cinderella_history/episode_result/44/3000110/1/0'; // createjsの演出が全て終了した場合の飛び先urlの定義
         window.im_cjs.chara_num = 10;
