--- a/cinderella_history/play_episode/44/3000110/1/0.html
+++ b/cinderella_history/play_episode/44/3000110/1/0.html
@@ -2738,7 +2738,7 @@
         };
         window.im_cjs.title_name = '事務所' || 'no_title';
         window.im_cjs.event_type = '2' || 0;
-        window.im_cjs.jump_url = 'http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/cinderella_history/episode_result/44/3000110/1/0'; // createjsの演出が全て終了した場合の飛び先urlの定義
+        window.im_cjs.jump_url = '../../../../../mypage.html'; // createjsの演出が全て終了した場合の飛び先urlの定義
         window.im_cjs.chara_num = 10;
         window.im_cjs.voice_flag = 0; // 音声再生フラグを定義
     </script>
