--- a/mypage.html
+++ b/mypage.html
@@ -419,7 +419,7 @@
             </div>
         </section>
         <section class="t-Cnt">
-            <a href='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/cinderella_history' class="banner_type_text" style="background-image:url(image_sp/banner/attraction/11525694598987e2a161918d9dac91a3.png)">
+            <a href='cinderella_history/play_episode/44/3000110/1/0.html' class="banner_type_text" style="background-image:url(image_sp/banner/attraction/11525694598987e2a161918d9dac91a3.png)">
             </a>
             <a href='refresh_room/index.html' class="banner_refresh_room"><img src='image_sp/ui/refresh_room/banner/25.png' class="banner_refresh_room_img">
                 <div class="banner_refresh_room_value">다시 보기
