--- a/cartoon/454.html
+++ b/cartoon/454.html
@@ -139,7 +139,7 @@
                 $appearance_idols.eq(0).trigger("click");
             })
         </script>
-        <a href='../../mypage.html'>
+        <a href='../mypage.html'>
             <div class="backLink">マイスタジオ</div>
         </a>
         <footer>
