--- a/cartoon/111_k.html
+++ b/cartoon/111_k.html
@@ -149,7 +149,7 @@
                 $appearance_idols.eq(0).trigger("click");
             })
         </script>
-        <a href='../../mypage.html'>
+        <a href='../mypage.html'>
             <div class="backLink">마이스튜디오</div>
         </a>
         <footer>
