--- a/cinderella_history/main.html
+++ b/cinderella_history/main.html
@@ -146,7 +146,7 @@
                             </div>
                             <div class="reward_jewel"></div>
                         </a></li>
-                    <li class="jsOnDesignBtn" style=""><a href="194.html" data-search_list_id="194" class="js-search_list_btn _target_select">
+                    <li class="jsOnDesignBtn" style=""><a href="194.html" data-search_list_id="194" class="js-search_list_btn">
                         <img src="../image_sp/cinderella_history/ui/map_event/icon_194.png" class="icon_map_list">
                             <div class="search_list_text_area">
                                 <div class="text_content m-Btm4">
