--- a/mypage.html
+++ b/mypage.html
@@ -419,7 +419,7 @@
             </div>
         </section>
         <section class="t-Cnt">
-            <a href='cinderella_history/play_episode/44/3000110/1/0.html' class="banner_type_text" style="background-image:url(image_sp/banner/attraction/11525694598987e2a161918d9dac91a3.png)">
+            <a href='cinderella_history/main.html' class="banner_type_text" style="background-image:url(image_sp/banner/attraction/11525694598987e2a161918d9dac91a3.png)">
             </a>
             <a href='refresh_room/index.html' class="banner_refresh_room"><img src='image_sp/ui/refresh_room/banner/25.png' class="banner_refresh_room_img">
                 <div class="banner_refresh_room_value">다시 보기
@@ -461,7 +461,7 @@
                 <div class="area-frame_wrap">
                     <div class="area_banner_triplicate">
                         <ul class="jsOnBanner">
-                            <li><a href='https://uhlmkashim.github.io/anniversary/radio/target_live_bc_id/4.html'>
+                            <li><a href='radio/target_live_bc_id/4.html'>
                             <img src='image_sp/banner/campaign_contents/845e4fc0630f186929f0e5e9250477dc.jpg' class="mini_banner"></a></li>
                         </ul>
                     </div>
@@ -509,7 +509,7 @@
             var now_time = 1578929223;
             var idolArr = [];
             var user_name = "argavand";
-            var url_ajax_get_card_comment = 'http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/mypage/ajax_get_card_comment%3Fl_frm%3DMypage_index_1%26rnd%3D146925907';
+            var url_ajax_get_card_comment = 'http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/mypage/ajax_get_card_comment';
             var url_bg_idol_5 = 'image_sp/ui/mypage_new/bg/bg_idol_5.png';
             idolArr['atk'] = [];
             idolArr['def'] = [];
