--- a/cinderella_history/109.html
+++ b/cinderella_history/109.html
@@ -93,7 +93,7 @@
                 httpObj.send(null);
             }
             if (flashPlayerVersion != "" && aa != "2" && pexFlag != 1 && native_app_flg != "1" && chrome_app_flg != "1" && andapp_flg != "1") {
-                var retUrl = "../cinderella_history/109.html";
+                var retUrl = "109.html";
                 location.href = retUrl;
                 return;
             }
