--- a/memory/event_teaser/10th_produce_k.html
+++ b/memory/event_teaser/10th_produce_k.html
@@ -115,14 +115,14 @@
         </style>
         <header class="eventTop" style="margin-bottom:0;padding-bottom:5px;">
             <img src='../../image_sp/event/1738/top_event.jpg' width="100%" style="margin-top:-12px;">
-            <span class="yellow">近日開催予定!!</span>
+            <span class="yellow">곧 개최 예정!!</span>
         </header>
         <img src='../../image_sp/event/common/line/parple/line_hoshi.jpg' width="100%">
         <section class="naviArea">
             <img src="../../image_sp/ui/navi/tujo_m2.png" width="90">
             <div class="Wrap">
                 <div class="fukiRight">
-                    アイドルたちとコミュニケーションをとって、お祝いLIVEを成功させましょう! 素敵なアニバーサリーにしましょうね♪
+                    아이돌들과의 커뮤니케이션을 통해, 축하 LIVE를 성공시켜요! 멋진 애니버서리로 만들죠♪
                 </div>
             </div>
         </section>
@@ -133,7 +133,7 @@
                     <img src='../../image_sp/event/1738/teaser/idol_introduction_01.jpg' width="160" height="170">
                 </div>
                 <div class='produce_teaser passion'>
-                    ﾊｯﾋﾟｰｱﾆﾊﾞｰｻﾘｰ! ﾌﾟﾛﾃﾞｭｰｻｰ､楽しむ準備はできてるかい? 私たちと一緒に､最高にﾜｸﾜｸする記念日にしようねっ☆
+                    해피 애니버서리! 프로듀서, 즐길 준비는 됐을까? 우리들과 함께, 최고로 두근두근거리는 기념일로 만들자☆
                 </div>
             </div>
             <img src='../../image_sp/event/common/line/parple/line_hoshi.jpg' width="100%">
@@ -142,7 +142,7 @@
                     <img src='../../image_sp/event/1738/teaser/idol_introduction_02.jpg' width="160" height="170">
                 </div>
                 <div class='produce_teaser cool'>
-                    一年に一度の特別な日｡やることは変わらないけど…うん｡私にできる､最高のﾊﾟﾌｫｰﾏﾝｽをしてみせるから…見てて
+                    일년에 한번뿐인 특별한 날. 할 일은 변함없지만… 응. 내가 할 수 있는, 최고의 퍼포먼스를 해줄게… 봐줘.
                 </div>
             </div>
             <img src='../../image_sp/event/common/line/parple/line_hoshi.jpg' width="100%">
@@ -151,15 +151,15 @@
                     <img src='../../image_sp/event/1738/teaser/idol_introduction_03.jpg' width="160" height="170">
                 </div>
                 <div class='produce_teaser cute'>
-                    ｱﾆﾊﾞｰｻﾘｰですね､ﾌﾟﾛﾃﾞｭｰｻｰさん! 大切な日に､みんなの笑顔がたくさん見られるように…私も､精一杯頑張りますっ♪
+                    애니버서리네요, 프로듀서 씨! 중요한 날에, 모두의 미소가 잔뜩 보일 수 있도록… 저도, 힘껏 노력할게요♪
                 </div>
             </div>
         </section>
         <a href='../detail/1738/index.html'>
-            <div class="backLink">イベントメモリー</div>
+            <div class="backLink">이벤트 메모리</div>
         </a>
         <a href='../../mypage.html'>
-            <div class="backLink">マイスタジオ</div>
+            <div class="backLink">마이스튜디오</div>
         </a>
         <script src="../../js/ilibrary.js" type="text/javascript"></script>
         <script type="text/javascript">
