--- a/mypage.html
+++ b/mypage.html
@@ -7,7 +7,7 @@
     <meta http-equiv="cache-control" content="no-cache">
     <meta http-equiv="expires" content="-1">
     <meta name="format-detection" content="telephone=no">
-    <title>アイドルマスター シンデレラガールズ</title>
+    <title>메모리얼 북</title>
     <link rel="stylesheet" type="text/css" href="css/rich/new_mypage_common.css" media="all">
     <script type="text/javascript">
         if (window.localStorage) {
@@ -72,7 +72,7 @@
     <div id="top" class="page_container jsOnBtn">
         <nav class="area_menu_header">
             <div class="area_menu_header_6btn">
-                <h1 id="JtextLimit">모바마스 마토메</h1>
+                <h1 id="JtextLimit">메모리얼 북</h1>
                 <ul>
                     <li><a class="head_menu_01" href="mypage.html">
                             <div></div>
